online_quiz/src/css/QuizPage.css
.Head-cont {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: 2vw auto;
}

.Quizzes-grid {
  display: grid;
  grid-gap: 1.5rem;
  grid-auto-columns: 1fr;
  padding-block: 2rem;
  width: min(95%, 150rem);
  margin-inline: auto;
}

@media screen and (max-width: 992px) {
  .Quizzes-grid {
    grid-template-columns: repeat(1, 1fr);
    width: min(65%, 35rem);
  }
}

@media screen and (min-width: 992px) {
  .Quizzes-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (min-width: 1200px) {
  .Quizzes-grid {
    grid-template-columns: repeat(3, 1fr);
  }
}

.Quiz-cont {
  background-color: #f2f2f2;
  border-radius: 20px;
  padding: 1vw;
  size: 20vh;
  align-items: center;

  display: grid;
  grid-gap: 10px;
  grid-template-columns: repeat(2, 1fr);
}

.Quiz:hover {
  transition: transform 0.2s ease;
  transform: scale(1.0125);
}

.Quiz-info {
  display: block;
}

.Quiz-btn {
  justify-content: center;
  align-items: center;
  padding-top: 20px;
}

.Quiz-img {
  min-width: 8dvw;
  min-height: 6dvh;
  max-width: 12dvw;
  max-height: 14dvh;
  width: auto;
  height: auto;
  opacity: 85%;
}

.Quiz-img-bord {
  color: #1abc9c;
  border: 6px solid #fff;
  border-radius: 4px;
  border-color: #fff;
  border-image: linear-gradient(-45deg, #3498db, #e67e22) 1;
  background-color: transparent;
}

.Quiz-head {
  font-family: "Roboto", sans-serif;
  font-size: 1.4vw;
  font-weight: 800;
  text-align: center;
}

.Quiz-text {
  margin: 20px auto;
  font-family: "Sono", sans-serif;
  align-items: center;
  text-align: center;
  font-size: 0.9vw;
  font-weight: 600;
  color: #5c5b5a;
}

.QPageFont {
  font-family: initial;
  font-size: medium;
  font-weight: normal;
  font-style: normal;
  line-height: normal;
  letter-spacing: normal;
  text-transform: none;
  text-decoration: none;
  text-align: left;
  color: inherit;
  background-color: transparent;
}

